# mediapipe-custom-ops

./: .bazelversion  .gitignore  CMakeLists.txt  Makefile  README.md  WORKSPACE  build.sh  library.cpp  library.h
lib/: BUILD  library.cpp  library.h
ops/: variables.bzl
ops/kmeans_embedding_lookup/: BUILD  kmeans_embedding_lookup.cc  kmeans_embedding_lookup.h
ops/landmarks_to_transform_matrix/: BUILD  landmarks_to_transform_matrix.cc
ops/landmarks_to_transform_matrix/tf_patch/common/: BUILD  landmarks_to_transform_matrix.cc  landmarks_to_transform_matrix.h
ops/max_pool_argmax/: BUILD  max_pool_argmax.cc
ops/max_unpooling/: BUILD  max_unpooling.cc
ops/ngram_hash/: BUILD  ngram_hash.cc  ngram_hash.h
ops/ngram_hash/utils/: BUILD  ngram_hash_ops_utils.cc
ops/ngram_hash/utils/hash/: BUILD  murmur.cc  murmur.h
ops/ngram_hash/utils/utf/: BUILD  rune.c  runetype.c
ops/ragged/: BUILD  ragged_tensor_to_tensor_tflite.cc  ragged_tensor_to_tensor_tflite.h
ops/sentencepiece/: BUILD  double_array_trie.h  double_array_trie_builder.cc  model_converter.cc  optimized_encoder.cc  optimized_encoder.h  sentencepiece_tokenizer_tflite.cc  sentencepiece_tokenizer_tflite.h
ops/transform_landmarks/: BUILD  transform_landmarks.cc
ops/transform_landmarks/tf_patch/common/: BUILD  transform_landmarks.cc  transform_landmarks.h
ops/transform_tensor_bilinear/: BUILD  transform_tensor_bilinear.cc
ops/transform_tensor_bilinear/tf_patch/common/: BUILD  transform_tensor_bilinear.cc  transform_tensor_bilinear.h
ops/transpose_conv_bias/: BUILD  transpose_conv_bias.cc
